[package]
name = "wbproto-beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
wbproto_beautifier = { path = "../lib" }
anyhow = "1.0.86"
chardetng = "0.1.17"
clap = { version = "4.5.6", features = ["derive", "env"] }
colored = "2.1.0"
encoding_rs = "0.8.34"

[build-dependencies]
clap = { version = "4.5.6", features = ["derive", "env"] }
clap_complete = "4.5.5"
clap_mangen = "0.2.21"
fs_extra = "1.3.0"

[[bin]]
name = "wbproto-beautifier"
path = "src/main.rs"
