[package]
name = "wbproto_beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "env"] }
tree-sitter = ">=0.22.5"
tree-sitter-wbproto = { git = "https://github.com/acristoffers/tree-sitter-wbproto" }

[build-dependencies]
cc = "1.1"

[lib]
name = "wbproto_beautifier"
path = "src/lib.rs"
